# Challenge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Challenge/resource/shader/: block.vert
Challenge/run/resource/shader/: block.frag  block.vert
Challenge/src/: Interface.cpp  Interface.h  MagiCraft.cpp  main.cpp
Challenge/src/Game/: Block.cpp  Block.h  BlockManager.cpp  Game.cpp  Game.h  GameResource.cpp  GameResource.h
Challenge/src/Game/Client/: BlockModelManager.cpp
Challenge/src/Game/Renderer/: BlockModel.cpp  BlockModel.h
Challenge/src/Game/World/: Chunk.cpp  ChunkCache.cpp  ChunkCache.h  World.cpp
Challenge/src/Graphic/: Camera.cpp  Camera.h  Framebuffer.h  OpenGL.hpp  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Challenge/src/Util/: Image.cpp  Image.h  Logger.cpp  Logger.hpp  LoggerDefinition.cpp  LoggerDefinition.h  Noncopyable.h  Nonmovable.h  Texture2DArrayBuilder.cpp  Texture2DArrayBuilder.h
resource/shader/: block.frag
src/: Interface.cpp  MagiCraft.h  main.cpp
src/Game/: BlockManager.cpp  BlockManager.h  Game.cpp  Game.h  GameContentProvider.h  GameResource.cpp  GameResource.h
src/Game/Client/: BlockModelManager.cpp  BlockModelManager.h
src/Game/World/: Chunk.cpp  Chunk.h  World.cpp  World.h
src/Graphics/: Framebuffer.cpp  Framebuffer.h  ShaderProgram.h  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
src/Util/: Image.cpp  Image.h  Logger.cpp  Logger.hpp  Nonmovable.h  Power.hpp  Texture2DArrayBuilder.cpp  Texture2DArrayBuilder.h
(+17 files in other folders)
